2023: Fix alignment of sponsor images

--- a/src/pages/Sponsors.module.scss
+++ b/src/pages/Sponsors.module.scss
@@ -105,8 +105,11 @@
 			max-width: 30%;
 		}
 
+		> div a {
+			display: flex;
+		}
+
 		div,
-		a,
 		picture,
 		img {
 			aspect-ratio: 290 / 235;
